# template_project

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
notebooks/: test.ipynb
settings/: .bashrc  README.md  id_rsa.pub  install_packages.sh  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_py.txt  write_settings.sh
src/: test.md  test.py
